tests/ui/validate_no_list.stderr
error: Illegal syntax for attribute validate
 --> $DIR/validate_no_list.rs:5:4
  |
5 |     #[validate = "custom_validator"]
  |       ^^^^^^^^
